codesandbox/styles.css
*, *:before, *:after {
  box-sizing: border-box;
}
html {
  font-size: 16px;
}
body {
  transform: none !important;
  font-size: 1rem;
  margin: 0;
  padding: 0;
  width: auto;
  height: auto;
  border: none;
  color: black;
  line-height: 1rem;
  --hdr-h: 2.5rem;
  --nav-h: 11rem;
  --col-h-1: calc(var(--hdr-h) + var(--nav-h))
  overflow: auto;
  border: none;
  background-color: rgba(55, 55, 55, 1);
}
p, main p, header {
display: inline;
}
main {
  background-color: gray;
}
div.row { /* us-14 */
  width: 100%;
  margin: 0;
  padding: 0;
}
.col-1 {
  background:rgba(200, 200, 200, 0.5);
  width: 100%;
  height: var(--col-h-1);
  text-align: center;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 999;
  padding: 0;
  background: rgba(200, 200, 200, 1);
  width: 100vw;
  height: var(--hdr-h);
}
.col-2 {
  position: absolute;
  top: var(--hdr-h);
  left: 0;
  z-index: 3;
  scroll-margin-top: var(--hdr-h);
  width: 100%;
}
section {
  padding: 0.5rem 0.5rem 0.5rem 1rem;
  border: thin solid black;
  background-color: rgb(220, 220, 220);
}
section > p {
  margin: 1rem 1rem 2rem 3rem;
}
main h3, main h4 {
  padding: none;
  margin: none;
}
section > header {
  padding: -1rem 1rem 1rem 2rem;
  margin: -1rem 1rem 0 2rem;
}
article {
  margin: 0;
  padding: 1rem 1rem 0 2rem;
  border-width: thin 0 0 0;
  background-color: white;
}
article h3 {
  margin: -1rem 1rem -1rem 2rem;
}
article h4 {
  padding: 0em 0 0em 0em;
  margin: 0;
}
body > nav {
  display: block;
  z-index: 0;
  position: fixed;
  top: var(--hdr-h);
  left: 0;
}
.col-1  > header {
  display: block;
  text-align: center;
  margin: 0;
  padding:  0;
  height: var(--hdr-h);
}
.col-1 > header p {
  line-height: 1rem;;
  margin: 0.5rem;
}
h1 {
  height: 1rem;
  margin: 0.5rem;
}

section header {
  display: block;
  margin: -1rem 0rem -1rem 0rem;
  padding: 1rem 0rem 1rem 2rem;
  font-size: larger;
  font-weight: bold;
}
section p {
  margin: 0 0 0 5rem;
}
#btn-elem {
  border: thin solid black;
  background-color: yellow;
  height: 2em;
  margin: 1em 1em 1em 1em;
  padding: 0 1em 0 1em;
  border-radius: 0.5em;
  font-weight: bolder;
}
.main-section {
scroll-margin: var(--col-h-1);
}
/* Wide screen -> 2-column, left column vertical scroll bar */
@media (min-width: 540px) {
  body {
      --nav-w: 16rem;
  }
  .main-section {
      scroll-margin: 0;
  }
 .col-1 {
      margin: 0;
  }
  .col-1 > header {
      border:  medium  solid black;
  }
 div#nav-bar {
  width: var(--nav-w);
 } 
  .col-2 {
    border: solid dotted red;
    position: absolute;
    top: var(--hdr-h);
    left: var(--nav-w);
    margin: 0;
    scroll-margin-top: var(--hdr-h);
    scroll-margin-left: var(--nav-w);
    background: rgba(200, 200, 200, 0.5);
    z-index: 5;
  }
  main {
    color: black;
  }
  nav.nav-bar {
    text-align: center;
    height: auto;
    overflow-y:scroll;
    background: lightgray;
    position: fixed;
    top: var(--hdr-h);
    left: 0;
    z-index: 999;
    width: var(--nav-w);
    height: 100vh;
    margin: 0;
    line-height: 1.5rem;;
    font-size: 1.0rem;
    font-weight: bold;
    color: blue;
    text-decoration: none;
    display: block;
    border: solid black;
    border-width: 0 0 thin 0;
    margin: 0 0 0 0;
    padding: 0.4em 0em ;
  }

}
article h3 {
  display: block;
  margin: 3rem 1rem 1rem 1rem;
}
article h4 {
  margin: 3em 1em 0em 2em;
}

article ul {
  margin: 0;
  padding: 0;
}
article li {
  margin: 0;
  padding: 0;
}
article pre {
  display: block;
  background-color: black;
  color: yellow;
  margin: -1rem 1rem;
  padding: 1rem;
}
code, code span{
  display: inline-block;
  background-color: black;
  color: yellow;
  padding: 0 1em 0 1em;
  /*margin: 0 1em 0 1em;*/
line-height: 1.5em;
font-family: monospace;
}

article p {
  margin: 1em 1em 1em 3em;
}
article aside {
  margin: 2rem 1rem 1rem 1rem;
  font-style: italic;
}
article label {
  display: block;
  margin-top: 1rem;
}
article div {
  margin-top: 2em;
}
#event-div {
  display: flex;
  align-items: center;
  justify-content: center;
  color: magenta;
  background-color: green;
  width: 8rem;
  height: 4rem;
}
footer {
  display: block;
  background-color: inherit;
  background-color: lightgray;
  border: medium solid gray;
  margin: 0rem;
}
footer label {
  background-color: lightgreen;
}
article > header {
  margin-left: 0;
  padding-left: 0;
}
dl {
  margin: 0.5rem 0;
  font-weight: bold;
}
dt {
  margin-top: 0.5rem;
  font-weight: medium;
  margin-left: 1em;
}
dd {
  font-weight: normal;
  margin-left: 2em;
}

